Fichier csv source manquant au dépôt

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "0c30a902",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
     "matplotlib.use(\"Qt5Agg\")\n",
     "\n",
     "# Charger le CSV\n",
-    "df = pd.read_csv(\"fichier-de-donnees-numeriques.csv\")\n",
+    "df = pd.read_csv(\"data/fichier-de-donnees-numeriques.csv\")\n",
     "\n",
     "# Description du fichier\n",
     "print(f\"Description : {df.describe}\")\n",
@@ -116,7 +116,7 @@
     "Utilisation de missingno\n",
     "\n",
     "![Colonnes manquantes](imgs/Colonnes.png)\n",
-    "![Colonnes manquantes 2](imgs/Colonnes.png)"
+    "![Colonnes manquantes 2](imgs/Colonnes2.png)"
    ]
   },
   {
